--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -10,12 +10,14 @@
           <span *ngIf="loginForm.controls.username.errors">
             <div class="errors" *ngIf="submitted && loginForm.controls.username.errors.required">Username is required</div>
           </span>
+          <div class="errors" *ngIf="invalidCredentials">Incorrect username or password</div>
         </div>
         <div class="form-group">
           <input matInput placeholder="password" style="-webkit-text-security: square" type="text" formControlName="password">
           <span *ngIf="loginForm.controls.password.errors">
             <div class="errors" *ngIf="submitted && loginForm.controls.password.errors.required">Password is required</div>
           </span>
+          <div class="errors" *ngIf="invalidCredentials">Incorrect username or password</div>
         </div>
         <button id="submit" class="btn btn-primary" type="submit">Submit</button>
       </form>
