--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-background">
-  <a class="nav-link ml-5 pixel-font" routerLink="/home" routerLinkActive="active">Home</a>
-  <a class="nav-link ml-5 pixel-font" routerLink="/today" routerLinkActive="active">Today</a>
-  <a class="nav-link pixel-font ml-5" href="#">Analytics</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/today" routerLinkActive="active">Today</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/saved" routerLinkActive="active">Saved</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/analytics" routerLinkActive="active">Analytics</a>
   <a class="nav-link pixel-font ml-5" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
-  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-5" routerLink="/register" routerLinkActive="active">Register</a>
-  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-5" routerLink="/login" routerLinkActive="active">Login</a>
-  <a *ngIf="isLoggedIn()" class="nav-link pixel-font ml-5" (click)="logout()">Sign Out</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/discussion" routerLinkActive="active">Discussion</a>
+  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-auto" routerLink="/register" routerLinkActive="active">Register</a>
+  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-1 btn btn-light" routerLink="/login" routerLinkActive="active">Login</a>
+  <a *ngIf="isLoggedIn()" style="color: black" class="nav-link pixel-font btn btn-light ml-auto" (click)="logout()">Sign Out</a>
 </nav>
