--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
   <a class="nav-link pixel-font ml-5" routerLink="/saved" routerLinkActive="active">Saved</a>
   <a class="nav-link pixel-font ml-5" routerLink="/analytics" routerLinkActive="active">Analytics</a>
   <a class="nav-link pixel-font ml-5" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
-  <a class="nav-link pixel-font ml-5" routerLink="/discussion" routerLinkActive="active">Discussion</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/about" routerLinkActive="active">About</a>
   <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-auto" routerLink="/register" routerLinkActive="active">Register</a>
-  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-1 btn btn-light" routerLink="/login" routerLinkActive="active">Login</a>
+  <a *ngIf="!isLoggedIn()" style="color: black" class="nav-link pixel-font ml-1 btn btn-light" routerLink="/login" routerLinkActive="active">Login</a>
   <a *ngIf="isLoggedIn()" style="color: black" class="nav-link pixel-font btn btn-light ml-auto" (click)="logout()">Sign Out</a>
 </nav>
