--- a/client/src/app/weather-card-today/weather-card-today.component.css
+++ b/client/src/app/weather-card-today/weather-card-today.component.css
@@ -318,7 +318,7 @@ input[type=text] {
   float:left;
   margin-right:15px;
 }
-#error-label {
+.error-label {
   position: absolute;
   width: 250px;
   font-size: 20px;
