--- a/client/src/app/weather-card-today/weather-card-today.component.html
+++ b/client/src/app/weather-card-today/weather-card-today.component.html
@@ -29,7 +29,7 @@
         <img *ngIf="isRain && !isSnow && isDayTime" class="weather-img" src="../../assets/rain.png">
         <img *ngIf="isRain && !isSnow && !isDayTime" class="weather-img-night" src="../../assets/rain.png">
         <img *ngIf="(isSnow && !isRain) || icon=='Slight Chance Flurries' || icon=='Chance Flurries' || icon=='Flurries Likely' || icon=='Flurries' || icon=='Blizzard' && isDayTime" class="weather-img" src="../../assets/snow.png">
-        <img *ngIf="(isSnow && !isRain) || icon=='Slight Chance Flurries' || icon=='Chance Flurries' || icon=='Flurries Likely' || icon=='Flurries' || icon=='Blizzard' && false" class="weather-img-night" src="../../assets/snow.png">
+        <img *ngIf="(isSnow && !isRain) || icon=='Slight Chance Flurries' || icon=='Chance Flurries' || icon=='Flurries Likely' || icon=='Flurries' || icon=='Blizzard' && !isDayTime" class="weather-img-night" src="../../assets/snow.png">
         <img *ngIf="isRain && isSnow && isDayTime" class="weather-img" src="../../assets/rainsnow.png">
         <img *ngIf="isRain && isSnow && !isDayTime" class="weather-img-night" src="../../assets/rainsnow.png">
         <img *ngIf="jsonReaderService.hourlyJSON.properties.periods[0].shortForecast.toLowerCase().includes('thunderstorms') && isDayTime" class="weather-img" src="../../assets/thunderday.png">
