--- a/client/src/app/analytics/analytics.component.html
+++ b/client/src/app/analytics/analytics.component.html
@@ -1,1 +1,4 @@
-<p>analytics works!</p>
+<iframe src="https://datahub.io/core/global-temp/view/0" width="100%" height="475px" frameborder="0"></iframe>
+<iframe src="https://datahub.io/core/co2-ppm/view/0" width="100%" height="475px" frameborder="0"></iframe>
+<iframe src="https://datahub.io/core/co2-ppm/view/1" width="100%" height="475px" frameborder="0"></iframe>
+<iframe src="https://datahub.io/core/glacier-mass-balance/view/0" width="100%" height="475px" frameborder="0"></iframe>
